Оживила модальное окно

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="container-page-menu">
             <ul class="navigation-list page-menu">
               <li class="page-item">
-                <a class="page-link link-states" href="#">Доставка</a>
+                <a class="page-link link-states modal-open" href="#">Доставка</a>
               </li>
               <li class="page-item">
                 <a class="page-link link-states" href="#">Гарантия</a>
